--- a/helpdeskk/src/app/login/login.component.html
+++ b/helpdeskk/src/app/login/login.component.html
@@ -6,7 +6,9 @@
           method="POST"
           class="w-543px h-383px rounded-1 p-4 border bg-white"
           enctype="multipart/form-data">
-          <button type="button" class="btn-close .float-right" (click)="close()" aria-label="Close"></button>
+          <button id="b12" type="button" class="btn-close" (click)="close()" aria-label="Close"></button>
+          <br>
+        
           <label class="d-block mb-4">
             <span class="form-label d-block" class="row mx-0 justify-content-center">Admin Number</span>
             <br>
