--- a/helpdeskk/src/app/read/read.component.html
+++ b/helpdeskk/src/app/read/read.component.html
@@ -12,7 +12,7 @@
       <ul>
         <li>
           
-            <a href = "#"class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success">LOGOUT</button></a>
+            <a href = "#"class="nav-link active" id="ModalExample" (click)="logout()" ><button type="button" class="btn btn-success">LOGOUT</button></a>
           </li>
         </ul>
 
