--- a/helpdeskk/src/app/techlogin/techlogin.component.css
+++ b/helpdeskk/src/app/techlogin/techlogin.component.css
@@ -121,3 +121,7 @@ nav ul {
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  #b12{
+    float: right;
+}
