--- a/helpdeskk/src/app/techlogin/techlogin.component.html
+++ b/helpdeskk/src/app/techlogin/techlogin.component.html
@@ -7,7 +7,8 @@
           action="#"
           enctype="multipart/form-data"
           [formGroup]="userForm" (ngSubmit)="userSubmit()">
-          <button type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
+          <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
+          <br>
           <label class="d-block mb-4">
             <span class="form-label d-block" class="row mx-0 justify-content-center">Technician Number</span>
             <br>
