--- a/helpdeskk/src/app/viewrequest/viewrequest.component.html
+++ b/helpdeskk/src/app/viewrequest/viewrequest.component.html
@@ -11,7 +11,11 @@
         <div id="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
-
+        <ul>
+            <li>
+                <a href = "#" (click)="logout()" class="nav-link active" id="ModalExample" ><button type="button" class="btn btn-success"  >LOGOUT</button></a>
+              </li>
+            </ul>
     </NAv>
 </div>
 
