--- a/helpdeskk/src/app/form/form.component.html
+++ b/helpdeskk/src/app/form/form.component.html
@@ -1,44 +1,31 @@
-
-<div >
+<div>
   <div>
-      <div class="body">
-        <form
-          method="POST"
-          class="w-543px h-383px rounded-1 p-4 border bg-white"
-          action="#"
-          enctype="multipart/form-data"
-          >
-          <button  id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
+    <div class="body">
+      <form method="POST" class="w-543px h-383px rounded-1 p-4 border bg-white" action="#"
+        enctype="multipart/form-data">
+        <button id="b12" type="button" class="btn-close float-right" (click)="close()" aria-label="Close"></button>
+        <br>
+        <label class="d-block mb-4">
+          <span class="form-label d-block" class="row mx-0 justify-content-center">Staff Number</span>
           <br>
-          <label class="d-block mb-4">
-            <span class="form-label d-block" class="row mx-0 justify-content-center">Staff Number</span>
-            <br>
-            <input
-            [(ngModel)]="staffLogin.staff_id" name="staffLogin.staff_id"
-           
-              type="text"
-              class="form-control"
-              placeholder="214412845"
-            />
-          </label>
-  
-          
-        
-  
-          <div class="mb-3 row mx-0 justify-content-center">
-            <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="staff_login()" >
-              Submit
-            </button>
-          </div>
-  
-          <div class="d-block text-end"> 
-            
-          </div>
+          <input [(ngModel)]="staffLogin.staff_id" name="staffLogin.staff_id" type="text" class="form-control"
+            placeholder="214412845" />
+        </label>
 
-        </form>
-      </div>
+        <div class="mb-3 row mx-0 justify-content-center">
+          <button type="submit" class="btn btn-primary px-3 rounded-3" (click)="staff_login()">
+            Submit
+          </button>
+        </div>
+
+        <div class="d-block text-end">
+
+        </div>
+
+      </form>
     </div>
   </div>
+</div>
 
 
 
@@ -53,7 +40,7 @@
 
 
 
-  
+
 <!-- <div class="container mt-4 mb-4 shadow-lg p-3 mb-5 bg-white rounded">
   <div class="row mx-0 justify-content-center">
       <div class="col-md-8 col-lg-8 px-lg-2 col-xl-8 px-xl-0 px-xxl-3">
