--- a/src/app/pages/track-request/track-request.component.css
+++ b/src/app/pages/track-request/track-request.component.css
@@ -1,7 +1,18 @@
+
+body{
+
+    background-color: white;
+}
+
 .sticky {
+    width: 100%;
     background-color: #005596;
     height:115px;
     
+}
+.toggleMenu {
+
+    display:none;
 }
 
 .center 
@@ -24,10 +35,10 @@ a {
 }
 
 
-img {
+.logo {
     height: 100px;
 
-    margin-top: 20px;
+    margin-top: 10px;
 }
 body {
 
@@ -135,6 +146,12 @@ form {
     text-align: center;
    
 }
+.middle {
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 0 auto;
+   
+}
 
 .container .progress {
     margin: 0 auto;
@@ -170,4 +187,173 @@ label {
 .progressBar {
     width: 50%;
     background-color: #005596;
+}
+
+
+
+@media only screen and (max-width: 1200px) {
+    .sticky {
+        width: 100%;
+    }
+    body {
+        background-color: yellow;
+    }
+    .sideNav {
+        width: 300px;
+
+    }
+    .contentContainerRight {
+        margin-top: 0%;
+        
+    
+    
+    }
+    form { 
+
+        width: 900px;
+    }
+    .toptitle {
+        width: 750px;
+        margin:5% 5%;
+        
+    }
+    label {
+        display: inline-block;
+        margin: 0 30px 0px;
+        padding: 5px 15px;
+       
+    
+    }
+   
+
+}
+@media only screen and (max-width: 992px) {
+    body {
+        background-color:lightgray;
+        width: 100%;
+    }
+    .logo {
+        height: 90px;
+        margin-top: 4px;
+    }
+    .sticky {
+        width: 100%;
+    }
+    .sideNav {
+        width: 200px;
+
+    }
+    .contentContainerRight {
+        margin-top: 0%;
+        margin-left: 10.9%;
+    
+    
+    }
+    form { 
+
+        width: 600px;
+    }
+    .toptitle {
+        width: 660px;
+        margin:5% 8%;
+        font-size: 20px;
+        
+        padding-left: 40px;
+        
+    }
+    .container {
+        margin: 20px auto;
+        width: 700px;
+        text-align: center;
+       
+    }
+    label {
+        display: inline-block;
+        margin: 0 30px ;
+        padding: 1px 10px;
+       
+    
+    }
+
+    @media only screen and (max-width: 768px) {
+
+        body{
+            background-color: rgb(235, 143, 89);
+            width: 100%;
+        }
+        .sticky{
+            border: 1px solid red;
+        }
+        .logo {
+           height: 80px;
+        }
+        .sideNav {
+            display: none;
+    
+        }
+        .toggleMenu {
+
+            display:block;
+            width: 10%;
+            
+            
+            
+            
+        }
+        .contentContainerRight {
+            margin-top: 0%;
+            margin-left: -15%;
+        
+        
+        }
+        .container {
+
+            margin: 20px 15%;
+            width: 1000px;
+            text-align: center;
+           
+        }
+        label {
+            display: inline-block;
+            margin: 0 30px ;
+            padding: 1px 0px;
+           
+        
+        }
+    }
+
+    @media only screen and (max-width: 576px) {
+
+        body{
+            background-color: rgb(131, 247, 116);
+            width: 100%;
+        }
+        .sideNav {
+            display: none;
+    
+        }
+        .contentContainerRight {
+            margin-top: 0%;
+            margin-left: -35%;
+        
+        
+        }
+        .toptitle {
+            width: 560px;
+            margin:5% 13%;
+            font-size: 18px;
+            
+            padding-left: 40px;
+            
+        }
+        .container {
+            margin: 20px 15%;
+            width: 500px;
+            text-align: center;
+           
+        }
+
+
+    }
+
 }
