--- a/src/app/redirectPages/footer/footer.component.css
+++ b/src/app/redirectPages/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer {
    
     position: absolute;
-    top: 82.3%;
+    top: 97.5%;
     background: #005596;
     height: 42px;
     margin: 33.13% 0;
@@ -19,4 +19,23 @@
 
     letter-spacing: 0.035em;
     color: white;
+}
+@media only screen and (max-width: 576px) {
+
+    .footer {
+   
+    position: absolute;
+    top: 97.5%;
+    background: #005596;
+    height: 42px;
+    margin: 33.13% 0;
+    padding: 0px;
+    }
+
+    .center{
+
+        margin:1px;
+        font-weight: 700;
+    font-size: 10px;
+    }
 }
