--- a/helpdeskk/src/app/read/read.component.html
+++ b/helpdeskk/src/app/read/read.component.html
@@ -69,8 +69,8 @@
             <br>
             <br>
             <span class="form-label d-block">Staff Number</span>
-            <input type="text" class="form-control" placeholder="235578933"  [(ngModel)]="requestform.staff_id" name="requestform.staff_id"
-              name="requestform.venue" />
+             <!-- <input type="text" class="form-control" placeholder="235578933"  [(ngModel)]="requestform.staff_id" name="requestform.staff_id"
+              name="requestform.venue" />  -->
           </label>
 
           <label class="Cater" for="Cater">
@@ -87,8 +87,8 @@
 
           <label class="d-block mb-4">
             <span class="form-label d-block">Venue</span>
-            <input type="text"  [(ngModel)]="requestform.venue" name="requestform.venue" class="form-control"
-              placeholder="joe.bloggs@example.com" />
+            <!-- <input type="text"  [(ngModel)]="requestform.venue" name="requestform.venue" class="form-control"
+              placeholder="joe.bloggs@example.com" /> -->
           </label>
 
           <label class="d-block mb-4">
