tracking page is done, it has to be tested.Start with the admin view all request

--- a/src/app/pages/adminviewrequest/adminviewrequest.component.css
+++ b/src/app/pages/adminviewrequest/adminviewrequest.component.css
@@ -86,11 +86,16 @@ body {
    
     
     border-bottom: 3px solid #005596;
-    width: 95px;
+    width: 115px;
     padding-left: 0;
     
 }
 
+#hover:hover {
+    font-weight: bold;
+   
+   
+}
 
 .contentContainerRight {
     
