--- a/src/app/pages/track-request/track-request.component.css
+++ b/src/app/pages/track-request/track-request.component.css
@@ -11,7 +11,7 @@ body{
     
 }
 .toggleMenu {
-
+    cursor: pointer;
     display:none;
 }
 
@@ -58,11 +58,16 @@ body {
    
 
 }
-
+#hover:hover {
+    font-weight: bold;
+   
+   
+}
 .contentContainerRight {
-    width:1562px;
+   
     height: 1055px;
     margin-left: 17.9%;
+    
     border: 1px solid green;
    padding-left: 50px;
 
@@ -91,6 +96,11 @@ form {
     margin:5% 6%;
     padding-left: 50px;
 }
+h4 {
+    text-align: center;
+    font-weight: 400;
+    
+}
 
 
 .breadcrumbNav {
@@ -107,7 +117,7 @@ form {
 #breadcrumbpadding {
 
     
-    padding: 10px 0;
+    padding: 6px 0;
 }
 
  a {
@@ -133,24 +143,32 @@ form {
    
     
     border-bottom: 3px solid #005596;
-    width: 70px;
-    
-    
-    
+    width: 70px;  
     
 }
 
 .container {
-    margin: 20px auto;
-    width: 850px;
+    
+    margin: 2% auto;
+    width: 1050px;
     text-align: center;
    
 }
-.middle {
-    border: 1px solid black;
+.middleTable {
+
+    border: 1px solid black ;
+}
+.middleTableDiv {
+    
+    background-color: rgb(255, 254, 254);
+    box-shadow: 0px 2px 6px black;
     border-radius: 10px;
-    margin: 0 auto;
-   
+    width: 850px;
+    height: 500px;
+    margin: auto 17.5%;
+}
+.middleTableDivTextMargin {
+    margin: 1%;
 }
 
 .container .progress {
@@ -165,29 +183,65 @@ form {
 
 label {
     display: inline-block;
-    margin: 0 60px 10px;
+    margin: 0 60px 8px;
     padding: 5px 15px;
+    cursor: pointer;
+    color: white;
+    border-radius: 10px;
+    font-weight:500;
    
 
 }
-#red{
-    color: red;
-}
 
-#amber{
-    color: orange;
+.todo{
+    background-color: red;
+    
 }
-#gray{
-    color: gray;
-}
-#green{
-    color: green;
-}
+.Assigned{
 
-.progressBar {
-    width: 50%;
     background-color: #005596;
 }
+.InProgress{
+
+    background-color: orange;
+}
+.OnHold{
+
+    background-color: lightgrey;
+}
+.Done{
+
+    background-color: green;
+}
+
+
+.todo:hover{
+    color: red;
+    background-color: white;
+
+}
+.Assigned:hover{
+    color: #005596;
+    background-color: white;
+
+}
+.InProgress:hover{
+    color: orange;
+    background-color: white;
+
+}
+.OnHold:hover{
+    color: lightgrey;
+    background-color: white;
+
+}
+.Done:hover{
+    color: green;
+    background-color: white;
+
+}
+
+
 
 
 
@@ -203,7 +257,9 @@ label {
 
     }
     .contentContainerRight {
-        margin-top: 0%;
+       
+        margin-top:0%;
+        margin-left: 10%;
         
     
     
@@ -213,8 +269,10 @@ label {
         width: 900px;
     }
     .toptitle {
-        width: 750px;
-        margin:5% 5%;
+        border:1px solid red;
+        width: 700px;
+        margin:5% 17%;
+        
         
     }
     label {
@@ -244,6 +302,7 @@ label {
 
     }
     .contentContainerRight {
+        
         margin-top: 0%;
         margin-left: 10.9%;
     
@@ -282,6 +341,7 @@ label {
             width: 100%;
         }
         .sticky{
+            width: 100%;
             border: 1px solid red;
         }
         .logo {
@@ -301,6 +361,7 @@ label {
             
         }
         .contentContainerRight {
+          
             margin-top: 0%;
             margin-left: -15%;
         
@@ -333,13 +394,14 @@ label {
     
         }
         .contentContainerRight {
+           
             margin-top: 0%;
-            margin-left: -35%;
+            margin-left: -28%;
         
         
         }
         .toptitle {
-            width: 560px;
+            width: 520px;
             margin:5% 13%;
             font-size: 18px;
             
